--- a/404.html
+++ b/404.html
@@ -7,17 +7,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>404 | Page Not Found | Khana Khajana</title>
+	<title>404 | Page Not Found | Khana Khazana</title>
 
 	<meta name="keywords"
-		content="page not found, 404 error, Indian restaurant website, Khana Khajana 404, missing page, Indian cuisine USA" />
+		content="page not found, 404 error, Indian restaurant website, Khana Khazana 404, missing page, Indian cuisine USA" />
 	<meta name="description"
-		content="Oops! The page you’re looking for isn’t available. Return to Khana Khajana’s homepage and explore our delicious Indian cuisine.">
-	<meta name="author" content="Khana Khajana">
+		content="Oops! The page you’re looking for isn’t available. Return to Khana Khazana’s homepage and explore our delicious Indian cuisine.">
+	<meta name="author" content="Khana Khazana">
 
 	<!-- Favicon -->
-	<meta property="og:image" content="img/apple-touch-icon.png">
-	<meta property="og:url" content="img/apple-touch-icon.png">
+	<meta property="og:image" content="https://khanakhazananj.com/img/apple-touch-icon.png">
+	<meta property="og:url" content="https://khanakhazananj.com/img/apple-touch-icon.png">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -95,8 +95,8 @@
 								<nav>
 									<ul class="list list-unstyled d-flex text-1 mb-0">
 										<li class="mb-0"><a href="contact-us.html#talkus"
-												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">Book
-												Table</a></li>
+												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">RESERVE
+												NOW</a></li>
 
 									</ul>
 								</nav>
