--- a/about-us.html
+++ b/about-us.html
@@ -7,17 +7,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>About Khana Khajana | Authentic Indian Cuisine in USA</title>
+	<title>About Khana Khazana | Authentic Indian Cuisine in USA</title>
 
 	<meta name="keywords"
-		content="about Indian restaurant, Khana Khajana story, Indian cuisine USA, traditional Indian food, best Indian restaurant, Indian dining experience" />
+		content="about Indian restaurant, Khana Khazana story, Indian cuisine USA, traditional Indian food, best Indian restaurant, Indian dining experience" />
 	<meta name="description"
-		content="Discover the story of Khana Khajana, where tradition meets taste. Our passion for authentic Indian cuisine brings you an unforgettable dining experience in the USA.">
-	<meta name="author" content="Khana Khajana">
+		content="Discover the story of Khana Khazana, where tradition meets taste. Our passion for authentic Indian cuisine brings you an unforgettable dining experience in the USA.">
+	<meta name="author" content="Khana Khazana">
 
 	<!-- Favicon -->
-	<meta property="og:image" content="img/apple-touch-icon.png">
-	<meta property="og:url" content="img/apple-touch-icon.png">
+	<meta property="og:image" content="https://khanakhazananj.com/img/apple-touch-icon.png">
+	<meta property="og:url" content="https://khanakhazananj.com/img/apple-touch-icon.png">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -95,8 +95,8 @@
 								<nav>
 									<ul class="list list-unstyled d-flex text-1 mb-0">
 										<li class="mb-0"><a href="contact-us.html#talkus"
-												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">Book
-												Table</a></li>
+												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">RESERVE
+												NOW</a></li>
 
 									</ul>
 								</nav>
@@ -255,7 +255,7 @@
 							<h2 class="font-weight-bold text-color-light">Our Vision</h2>
 							<p class="custom-text-color-2"><strong class="text-color-light">Spreading the Magic of
 									Indian Vegetarian Cuisine.
-								</strong></br>Khana Khajana aims to be the USA’s top vegetarian Indian restaurant,
+								</strong></br>Khana Khazana aims to be the USA’s top vegetarian Indian restaurant,
 								blending authenticity, innovation, and passion in every dish.</p>
 						</div>
 						<div class="col-lg-6 col-sm-8">
@@ -263,7 +263,7 @@
 							<h2 class="font-weight-bold text-color-light">Our Mission</h2>
 							<p class="custom-text-color-2">
 								<strong class="text-color-light">Redefining Indian Vegetarian Dining.
-								</strong></br> At Khana Khajana, our mission is to bring the diverse flavors
+								</strong></br> At Khana Khazana, our mission is to bring the diverse flavors
 								of India to every plate while maintaining authenticity, freshness, and innovation.
 							</p>
 						</div>
