--- a/contact-us.html
+++ b/contact-us.html
@@ -7,17 +7,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Contact Khana Khajana | Indian Restaurant in USA</title>
+	<title>Contact Khana Khazana | Indian Restaurant in USA</title>
 
 	<meta name="keywords"
-		content="contact Indian restaurant, Khana Khajana location, Indian restaurant near me, best Indian food USA, order Indian food, restaurant hours" />
+		content="contact Indian restaurant, Khana Khazana location, Indian restaurant near me, best Indian food USA, order Indian food, restaurant hours" />
 	<meta name="description"
-		content="Get in touch with Khana Khajana! Visit us for an authentic Indian dining experience or order online. Find our location, opening hours, and contact details here.">
-	<meta name="author" content="Khana Khajana">
+		content="Get in touch with Khana Khazana! Visit us for an authentic Indian dining experience or order online. Find our location, opening hours, and contact details here.">
+	<meta name="author" content="Khana Khazana">
 
 	<!-- Favicon -->
-	<meta property="og:image" content="img/apple-touch-icon.png">
-	<meta property="og:url" content="img/apple-touch-icon.png">
+	<meta property="og:image" content="https://khanakhazananj.com/img/apple-touch-icon.png">
+	<meta property="og:url" content="https://khanakhazananj.com/img/apple-touch-icon.png">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -95,8 +95,8 @@
 								<nav>
 									<ul class="list list-unstyled d-flex text-1 mb-0">
 										<li class="mb-0"><a href="contact-us.html#talkus"
-												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">Book
-												Table</a></li>
+												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">RESERVE
+												NOW</a></li>
 
 									</ul>
 								</nav>
@@ -204,14 +204,6 @@
 							<h2 class="font-weight-bold">Talk to Us</h2>
 							<p>Get in touch with Khana Khazana for inquiries, reservations, or assistance—we're happy to
 								help!</p>
-							<div class="row">
-								<div class="col-lg-12 col-sm-12  align-items-center">
-									<div class="custom-location">
-										<img src="img/demos/church/others/pin.png" alt class="img-fluid" />
-									</div>
-								</div>
-
-							</div>
 							<form id="contactFormMessage" class="contact-form custom-form-style-1 mt-4"
 								action="php/contact-form.php" method="POST">
 								<h6 class="font-weight-bold custom-primary-font">Send a Message:</h6>
@@ -265,7 +257,7 @@
 									hospitality, and local charm come together for an unforgettable meal. We can't wait
 									to serve you!</p>
 								<iframe
-									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.3388263033219!2d-74.50703010360981!3d40.535030206409516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3c0b6c36d0c23%3A0x25bb4a76e213a472!2s1760%20Easton%20Ave%2C%20Somerset%2C%20NJ%2008873%2C%20USA!5e0!3m2!1sen!2sin!4v1739267300271!5m2!1sen!2sin"
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d637.4605378916417!2d-74.50779306030006!3d40.535172262657774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3c100431e613f%3A0x940c38fae07be2c6!2sKhana%20Khazana!5e0!3m2!1sen!2sin!4v1739338257980!5m2!1sen!2sin"
 									width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
 									referrerpolicy="no-referrer-when-downgrade"></iframe>
 							</div>
