--- a/gallery.html
+++ b/gallery.html
@@ -7,17 +7,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Food & Ambience Gallery | Khana Khajana Indian Restaurant</title>
+	<title>Food & Ambience Gallery | Khana Khazana Indian Restaurant</title>
 
 	<meta name="keywords"
-		content="Indian food gallery, restaurant ambiance, vegetarian Indian dishes, best Indian food USA, Khana Khajana photos, Indian dining experience" />
+		content="Indian food gallery, restaurant ambiance, vegetarian Indian dishes, best Indian food USA, Khana Khazana photos, Indian dining experience" />
 	<meta name="description"
-		content="Take a visual journey through Khana Khajana! Explore our mouthwatering Indian vegetarian dishes and the warm, inviting ambiance of our restaurant in the USA.">
-	<meta name="author" content="Khana Khajana">
+		content="Take a visual journey through Khana Khazana! Explore our mouthwatering Indian vegetarian dishes and the warm, inviting ambiance of our restaurant in the USA.">
+	<meta name="author" content="Khana Khazana">
 
 	<!-- Favicon -->
-	<meta property="og:image" content="img/apple-touch-icon.png">
-	<meta property="og:url" content="img/apple-touch-icon.png">
+	<meta property="og:image" content="https://khanakhazananj.com/img/apple-touch-icon.png">
+	<meta property="og:url" content="https://khanakhazananj.com/img/apple-touch-icon.png">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -95,8 +95,8 @@
 								<nav>
 									<ul class="list list-unstyled d-flex text-1 mb-0">
 										<li class="mb-0"><a href="contact-us.html#talkus"
-												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">Book
-												Table</a></li>
+												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">RESERVE
+												NOW</a></li>
 
 									</ul>
 								</nav>
