--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Khana Khajana | Authentic Indian Restaurant in USA | Home</title>
+	<title>Khana Khazana | Authentic Indian Restaurant in USA | Home</title>
 
 	<meta name="keywords"
 		content="Indian restaurant USA, authentic Indian food, best Indian cuisine, Indian dining experience, vegetarian Indian food, Indian spices, traditional Indian dishes" />
 	<meta name="description"
-		content="Experience the rich flavors of India at Khana Khajana, an authentic restaurant in the USA. Enjoy traditional Indian dishes made with fresh ingredients and love.">
-	<meta name="author" content="Khana Khajana">
+		content="Experience the rich flavors of India at Khana Khazana, an authentic restaurant in the USA. Enjoy traditional Indian dishes made with fresh ingredients and love.">
+	<meta name="author" content="Khana Khazana">
 
 	<!-- Favicon -->
-	<meta property="og:image" content="img/apple-touch-icon.png">
-	<meta property="og:url" content="img/apple-touch-icon.png">
+	<meta property="og:image" content="https://khanakhazananj.com/img/apple-touch-icon.png">
+	<meta property="og:url" content="https://khanakhazananj.com/img/apple-touch-icon.png">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -95,8 +95,8 @@
 								<nav>
 									<ul class="list list-unstyled d-flex text-1 mb-0">
 										<li class="mb-0"><a href="contact-us.html#talkus"
-												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">Book
-												Table</a></li>
+												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">RESERVE
+												NOW</a></li>
 
 									</ul>
 								</nav>
@@ -311,7 +311,7 @@
 						<div class="col-md-8 col-xl-10">
 							<h2 class="font-weight-bold">More Than Just a Meal – An Experience
 							</h2>
-							<p>At Khana Khajana, we bring the heart of India to your table, blending rich culinary
+							<p>At Khana Khazana, we bring the heart of India to your table, blending rich culinary
 								traditions with a modern dining experience that caters to every palate. Nestled in the
 								heart of the USA, our restaurant is a tribute to India's vibrant heritage, aromatic
 								spices, and age-old recipes, crafted with a contemporary twist for a truly
@@ -453,7 +453,7 @@
 							<h2 class="font-weight-bold text-color-light">Our Vision</h2>
 							<p class="custom-text-color-2"><strong class="text-color-light">Spreading the Magic of
 									Indian Vegetarian Cuisine.
-								</strong></br>Khana Khajana aims to be the USA’s top vegetarian Indian restaurant,
+								</strong></br>Khana Khazana aims to be the USA’s top vegetarian Indian restaurant,
 								blending authenticity, innovation, and passion in every dish.</p>
 						</div>
 						<div class="col-lg-6 col-sm-8">
@@ -461,7 +461,7 @@
 							<h2 class="font-weight-bold text-color-light">Our Mission</h2>
 							<p class="custom-text-color-2">
 								<strong class="text-color-light">Redefining Indian Vegetarian Dining.
-								</strong></br> At Khana Khajana, our mission is to bring the diverse flavors
+								</strong></br> At Khana Khazana, our mission is to bring the diverse flavors
 								of India to every plate while maintaining authenticity, freshness, and innovation.
 							</p>
 						</div>
@@ -534,7 +534,7 @@
 				</div>
 				<div class="collapse" id="collapseMap">
 					<iframe
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.3388263033219!2d-74.50703010360981!3d40.535030206409516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3c0b6c36d0c23%3A0x25bb4a76e213a472!2s1760%20Easton%20Ave%2C%20Somerset%2C%20NJ%2008873%2C%20USA!5e0!3m2!1sen!2sin!4v1739267300271!5m2!1sen!2sin"
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d637.4605378916417!2d-74.50779306030006!3d40.535172262657774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3c100431e613f%3A0x940c38fae07be2c6!2sKhana%20Khazana!5e0!3m2!1sen!2sin!4v1739338257980!5m2!1sen!2sin"
 						height="400" width="2210" style="border:0;" allowfullscreen="" loading="lazy"
 						referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
