--- a/menu.html
+++ b/menu.html
@@ -7,17 +7,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Indian Vegetarian Menu | Khana Khajana USA</title>
+	<title>Indian Vegetarian Menu | Khana Khazana USA</title>
 
 	<meta name="keywords"
 		content="Indian menu USA, vegetarian Indian dishes, best Indian food, Indian curries, Indian street food, traditional Indian spices, Indian cuisine" />
 	<meta name="description"
-		content="Explore the flavorful vegetarian menu at Khana Khajana! From aromatic curries to street food delights, enjoy the best Indian dishes made with fresh ingredients and traditional spices.">
-	<meta name="author" content="Khana Khajana">
+		content="Explore the flavorful vegetarian menu at Khana Khazana! From aromatic curries to street food delights, enjoy the best Indian dishes made with fresh ingredients and traditional spices.">
+	<meta name="author" content="Khana Khazana">
 
 	<!-- Favicon -->
-	<meta property="og:image" content="img/apple-touch-icon.png">
-	<meta property="og:url" content="img/apple-touch-icon.png">
+	<meta property="og:image" content="https://khanakhazananj.com/img/apple-touch-icon.png">
+	<meta property="og:url" content="https://khanakhazananj.com/img/apple-touch-icon.png">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -95,8 +95,8 @@
 								<nav>
 									<ul class="list list-unstyled d-flex text-1 mb-0">
 										<li class="mb-0"><a href="contact-us.html#talkus"
-												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">Book
-												Table</a></li>
+												class="alternative-font-4 text-decoration-none text-3-5 font-weight-bold">RESERVE
+												NOW</a></li>
 
 									</ul>
 								</nav>
@@ -1080,7 +1080,7 @@
 				</div>
 				<div class="collapse" id="collapseMap">
 					<iframe
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.3388263033219!2d-74.50703010360981!3d40.535030206409516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3c0b6c36d0c23%3A0x25bb4a76e213a472!2s1760%20Easton%20Ave%2C%20Somerset%2C%20NJ%2008873%2C%20USA!5e0!3m2!1sen!2sin!4v1739267300271!5m2!1sen!2sin"
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d637.4605378916417!2d-74.50779306030006!3d40.535172262657774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3c100431e613f%3A0x940c38fae07be2c6!2sKhana%20Khazana!5e0!3m2!1sen!2sin!4v1739338257980!5m2!1sen!2sin"
 						height="400" width="2210" style="border:0;" allowfullscreen="" loading="lazy"
 						referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
