--- a/about-us.html
+++ b/about-us.html
@@ -306,7 +306,7 @@
 								</p>
 								<div class="testimonial-author d-flex justify-content-end">
 									<p>
-										<strong class="text-uppercase">Abhishek Patel & Daxesh Shah
+										<strong class="text-uppercase">Abhishek Patel & Dakshesh Shah
 										</strong>
 										<br>
 										<span class="text-color-primary"> - Founders and Executive Chefs</span>
