--- a/about-us.html
+++ b/about-us.html
@@ -150,6 +150,11 @@
 													</a>
 												</li>
 												<li>
+                                                    <a class="nav-link" href="catering.html">
+                                                        Catering
+                                                    </a>
+                                                </li>
+												<li>
 													<a class="nav-link" href="menu.html">
 														Menu
 													</a>
