--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
 													</a>
 												</li>
 												<li>
+													<a class="nav-link" href="catering.html">
+														Catering
+													</a>
+												</li>
+												<li>
 													<a class="nav-link" href="menu.html">
 														Menu
 													</a>
@@ -322,7 +327,38 @@
 					</div>
 				</div>
 			</section>
-			<section class="section section-height-3 bg-color-grey-scale-1 border-0 m-0">
+			<section class="section section-no-border bg-color-grey-scale-1 m-0">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-7 col-sm-7">
+							<h2 class="font-weight-bold">Exquisite Indian Catering for Every Occasion</h2>
+							<p>At <b>Khana Khazana</b>, we bring the magic of authentic Indian cuisine to your special
+								events. Whether it’s an intimate gathering or a grand celebration, our catering services
+								ensure an unforgettable dining experience with rich flavors, vibrant spices, and
+								handcrafted delicacies.</p>
+							<p class="text-2">Our expert chefs carefully curate menus that blend traditional recipes
+								with modern culinary artistry, ensuring every dish is a feast for the senses. From
+								weddings and corporate events to private parties and cultural festivities, we cater to
+								all occasions with passion and excellence.</p>
+							<a href="catering.html"
+								class="btn btn-primary custom-btn-style-1 text-uppercase mt-4">Explore Our Catering</a>
+						</div>
+						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
+							<div class="custom-box-squares">
+								<img class="custom-cloud left-pos-2" alt src="img/home/left-cloud.png" />
+								<div class="custom-big-square left-pos-2 custom-box-shadow"
+									style="background: url('img/home/big-left-square-img.jpg'); background-size: cover;">
+								</div>
+								<div class="custom-small-square left-pos-2 custom-box-shadow"
+									style="background: url('img/home/small-left-square-img.jpg'); background-size: cover;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="section section-height-3 bg-color-light border-0 m-0">
 				<div class="container pt-2">
 					<div class="row">
 						<div class="col text-center">
