--- a/menu.html
+++ b/menu.html
@@ -145,10 +145,15 @@
 													</a>
 												</li>
 												<li>
-													<a class="nav-link" href="about-us.html">
-														About US
-													</a>
-												</li>
+                                                    <a class="nav-link" href="about-us.html">
+                                                        About US
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a class="nav-link" href="catering.html">
+                                                        Catering
+                                                    </a>
+                                                </li>
 												<li>
 													<a class="nav-link active" href="menu.html">
 														Menu
