--- a/catering.html
+++ b/catering.html
@@ -189,7 +189,7 @@
 
             <section
                 class="page-header page-header-modern page-header-background page-header-background-sm parallax overlay overlay-color-dark overlay-show overlay-op-1 my-0"
-                data-plugin-parallax data-plugin-options="{'speed': 1.5}" data-image-src="img/slider/h1.jpg">
+                data-plugin-parallax data-plugin-options="{'speed': 1.5}" data-image-src="img/slider/4.jpg">
                 <div class="container">
                     <div class="row my-5">
                         <div class="col-md-12 align-self-center text-center">
@@ -239,7 +239,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/1.jpg" alt
+                                        <img src="img/catering/Birthday Parties.jpg" alt
                                             class="img-fluid" />
                                     </a>
                                 </span>
@@ -260,7 +260,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/1.jpg" alt
+                                        <img src="img/catering/Wedding.jpg" alt
                                             class="img-fluid" />
                                     </a>
                                 </span>
@@ -281,7 +281,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/1.jpg" alt
+                                        <img src="img/catering/Corporate Events.jpg" alt
                                             class="img-fluid" />
                                     </a>
                                 </span>
@@ -302,7 +302,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/1.jpg" alt
+                                        <img src="img/catering/Festivals & Cultural Gatherings.jpg" alt
                                             class="img-fluid" />
                                     </a>
                                 </span>
@@ -323,7 +323,7 @@
                             <span class="thumb-info custom-thumb-info-3 custom-box-shadow-2">
                                 <span class="thumb-info-wrapper">
                                     <a href="contact-us.html" class="text-decoration-none">
-                                        <img src="img/catering/1.jpg" alt
+                                        <img src="img/catering/Private Dinners.jpg  " alt
                                             class="img-fluid" />
                                     </a>
                                 </span>
