--- a/index.html
+++ b/index.html
@@ -193,6 +193,25 @@
 				<div class="owl-stage-outer">
 					<div class="owl-stage">
 						<div class="owl-item position-relative overflow-hidden"
+							style="background-image: url(img/slider/5.jpg); background-size: cover; background-position: center; background-position: center;">
+							<div class="container position-relative z-index-3 h-100">
+								<div class="row align-items-center justify-content-center h-100">
+									<div class="col-lg-7">
+										<div
+											class="d-flex flex-column justify-content-center align-items-center text-center h-100">
+
+											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
+												data-appear-animation="fadeInUpShorter"
+												data-appear-animation-delay="750"
+												data-plugin-options="{'minWindowWidth': 0}">Comming Soon
+											</h1>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="owl-item position-relative overflow-hidden"
 							style="background-image: url(img/slider/1.jpg); background-size: cover; background-position: center; background-position: center;">
 							<div class="container position-relative z-index-3 h-100">
 								<div class="row align-items-center justify-content-center h-100">
@@ -203,8 +222,8 @@
 											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
 												data-appear-animation="fadeInUpShorter"
 												data-appear-animation-delay="750"
-												data-plugin-options="{'minWindowWidth': 0}">bringing you the true
-												flavors of India.
+												data-plugin-options="{'minWindowWidth': 0}">Bringing You The True
+												Flavors Of India.
 											</h1>
 										</div>
 									</div>
@@ -223,8 +242,8 @@
 											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
 												data-appear-animation="fadeInUpShorter"
 												data-appear-animation-delay="750"
-												data-plugin-options="{'minWindowWidth': 0}">a lifestyle that nourishes
-												both body and soul.
+												data-plugin-options="{'minWindowWidth': 0}">A Lifestyle That Nourishes
+												Both Body And Soul.
 											</h1>
 
 
@@ -246,7 +265,7 @@
 											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
 												data-appear-animation="fadeInUpShorter"
 												data-appear-animation-delay="750"
-												data-plugin-options="{'minWindowWidth': 0}"> we go beyond serving food.
+												data-plugin-options="{'minWindowWidth': 0}"> We Go Beyond Serving Food.
 											</h1>
 
 										</div>
