--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 											<h1 class="text-color-light font-weight-extra-bold text-10 line-height-1 mb-2 appear-animation"
 												data-appear-animation="fadeInUpShorter"
 												data-appear-animation-delay="750"
-												data-plugin-options="{'minWindowWidth': 0}">Comming Soon
+												data-plugin-options="{'minWindowWidth': 0}">We are set for a grand opening on March 2, 2025 ! <br> Stay tuned for a culinary journey!
 											</h1>
 										</div>
 									</div>
