--- a/menu.html
+++ b/menu.html
@@ -104,15 +104,11 @@
 									<ul
 										class="header-social-icons social-icons social-icons-clean social-icons-icon-dark social-icons-medium me-2 mb-0 d-none d-sm-block ms-1">
 										<li class="social-icons-instagram">
-											<a href="http://www.instagram.com/" target="_blank" title="Instagram"><i
+											<a href="https://www.instagram.com/khana_khazana1760/" target="_blank" title="Instagram"><i
 													class="fab fa-instagram"></i></a>
 										</li>
-										<li class="social-icons-x">
-											<a href="http://www.x.com/" target="_blank" title="X"><i
-													class="fab fa-x-twitter"></i></a>
-										</li>
 										<li class="social-icons-facebook">
-											<a href="http://www.facebook.com/" target="_blank" title="Facebook"><i
+											<a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank" title="Facebook"><i
 													class="fab fa-facebook-f"></i></a>
 										</li>
 									</ul>
@@ -1140,13 +1136,11 @@
 					<div class="row text-center pb-5">
 						<div class="col">
 							<ul class="social-icons social-icons-clean custom-social-icons mb-3">
-								<li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank"
+								<li class="social-icons-facebook"><a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
 										title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
 								<li class="social-icons-googleplus"><a href="http://www.google.com/" target="_blank"
 										title="Google Plus"><i class="fab fa-google-plus-g"></i></a></li>
-								<li class="social-icons-x"><a href="http://www.x.com/" target="_blank" title="X"><i
-											class="fab fa-x-twitter"></i></a></li>
-								<li class="social-icons-instagram"><a href="http://www.instagram.com/" target="_blank"
+								<li class="social-icons-instagram"><a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
