--- a/index.html
+++ b/index.html
@@ -360,13 +360,7 @@
 						</div>
 						<div class="col-lg-5 col-sm-5 d-none d-sm-block">
 							<div class="custom-box-squares">
-								<img class="custom-cloud left-pos-2" alt src="img/home/left-cloud.png" />
-								<div class="custom-big-square left-pos-2 custom-box-shadow"
-									style="background: url('img/home/big-left-square-img.jpg'); background-size: cover;">
-								</div>
-								<div class="custom-small-square left-pos-2 custom-box-shadow"
-									style="background: url('img/home/small-left-square-img.jpg'); background-size: cover;">
-								</div>
+								<img class="custom-cloud left-pos-2" alt src="img/catering/Wedding.jpg" />
 							</div>
 						</div>
 					</div>
